--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,9 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
-      - run:
-          name: Run tests
-          command: #
+      # - run:
+      #     name: Run tests
+      #     command: python -m pytest
       - persist_to_workspace:
           root: ~/project
           paths:
