--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,47 @@
 version: 2.1
-orbs:
-  python: circleci/python@2.0.3
 
 jobs:
-  build_and_test: # this can be any name you choose
-    executor: python/default
+  build-and-push:
+    docker:
+      - image: cimg/base:2024.02
     steps:
       - checkout
-      - python/install-packages:
-          pkg-manager: pip
-      # - run:
-      #     name: Run tests
-      #     command: python -m pytest
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - .
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Build Docker image
+          command: docker build -t $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest .
+      - run:
+          name: Log in to Docker Hub
+          command: echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
+      - run:
+          name: Push Docker image to Docker Hub
+          command: docker push docker push $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+
+  test:
+    docker:
+      - image: cimg/base:2024.02
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Pull Docker image from Docker Hub
+          command: docker pull $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+      - run:
+          name: Run Docker container
+          command: docker run -d -p 5000:5000 --name test-container $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+      - run:
+          name: Test the application
+          command: |
+            sleep 5  # Wait for the container to start
+            curl -s http://localhost:5000 | grep "Hello, World!"
 
 workflows:
-  test_my_app:
+  version: 2
+  build-test-deploy:
     jobs:
-      - build_and_test
+      - build-and-push
+      - test:
+          requires:
+            - build-and-push
