--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   annotations:
     circleci.com/project-id: 80b12101-7f78-4f12-92a2-4d7baa6cee59
+  labels:
+    circleci.com/component-name: flask-app
+    circleci.com/version: 1.0.0
   name: flask-app
   
 spec:
@@ -14,6 +17,8 @@ spec:
     metadata:
       labels:
         app: flask-app
+        circleci.com/component-name: flask-app
+        circleci.com/version: 1.0.0
     spec:
       containers:
       - name: flask-app
