--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           docker_layer_caching: true
       - run:
           name: Build Docker image
-          command: docker build -t $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest .
+          command: docker build -t $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest .
       - run:
           name: Debug environment variables
           command: |
@@ -21,7 +21,7 @@ jobs:
           command: echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
       - run:
           name: Push Docker image to Docker Hub
-          command: docker push docker push $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+          command: docker push docker push $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest
 
   test:
     docker:
@@ -32,10 +32,10 @@ jobs:
           docker_layer_caching: true
       - run:
           name: Pull Docker image from Docker Hub
-          command: docker pull $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+          command: docker pull $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest
       - run:
           name: Run Docker container
-          command: docker run -d -p 5000:5000 --name test-container $DOCKER_HUB_USER_ID/$IMAGE_NAME:latest
+          command: docker run -d -p 5000:5000 --name test-container $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest
       - run:
           name: Test the application
           command: |
