--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,52 +1,24 @@
 version: 2.1
-
+ 
 jobs:
-  setup-minikube:
-    docker:
-      - image: cimg/base:stable
+  build:
+    machine:
+      image: ubuntu-2004:202010-01
     steps:
-      - checkout
       - run:
-          name: Install kubectl
+          name: Configure Minikube
           command: |
-            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-            sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+            curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube_latest_amd64.deb
+            sudo dpkg -i minikube_latest_amd64.deb
+            minikube start --vm-driver=docker --kubernetes-version=v1.19.0
+            minikube addons enable registry
       - run:
-          name: Install Minikube
-          command: |
-            curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-            chmod +x minikube
-            sudo mv minikube /usr/local/bin/
-      - run:
-          name: Start Minikube
-          command: |
-            minikube start --driver=docker
-      - run:
-          name: Verify Minikube and kubectl
+          name: Check status
           command: |
             minikube status
-            kubectl version --client
-
-  deploy-app:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - checkout
-      - run:
-          name: Deploy Application
-          command: |
-            kubectl apply -f manifest/deployment.yaml
-            kubectl apply -f manifest/flask-service.yaml
-      - run:
-          name: Verify Deployment
-          command: |
-            kubectl get pods -o wide
-            kubectl get svc
 
 workflows:
-  deploy-minikube:
+  version: 2
+  minikube-example:
     jobs:
-      - setup-minikube
-      - deploy-app:
-          requires:
-            - setup-minikube
+      - build
