--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
       - run:
           name: Deploy Application
           command: |
-            minikube kubectl -- apply -f manifest/deployment.yaml
-            minikube kubectl -- apply -f manifest/flask-service.yaml
+            minikube kubectl -- apply -f manifests/deployment.yaml
+            minikube kubectl -- apply -f manifests/flask-service.yaml
       - run:
           name: Verify Deployment
           command: |
