--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,28 @@
 version: 2.1
- 
+
 jobs:
-  build_and_deploy:
+  docker_img_build_and_push:
+    docker:
+      - image: cimg/base:current
+    steps:
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
+      - run:
+          name: Build Docker image
+          command: docker build -t $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest .
+      - run:
+          name: Log in to Docker Hub
+          command: echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin
+      - run:
+          name: Push Docker image to Docker Hub
+          command: docker push $DOCKER_HUB_USERNAME/$IMAGE_NAME:latest
+
+  minikube_run_and_deploy:
     machine:
       image: ubuntu-2004:current
       resource_class: large  
     steps:
-      - checkout
-      - run:
-          name: List Directory Contents
-          command: |
-            echo "Current working directory:"
-            pwd
-            echo "Listing files:"
-            ls -R
       - run:
           name: Configure Minikube
           command: |
@@ -35,10 +44,12 @@ jobs:
           command: |
             minikube kubectl -- get pods -o wide
             minikube kubectl -- get svc
- 
 
 workflows:
   version: 2
-  minikube-example:
+  build-test-deploy:
     jobs:
-      - build_and_deploy
+      - docker_img_build_and_push
+      - minikube_run_and_deploy:
+          requires:
+            - docker_img_build_and_push
