--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,14 @@ jobs:
       image: ubuntu-2004:current
       resource_class: large  
     steps:
+      - checkout
+      - run:
+          name: List Directory Contents
+          command: |
+            echo "Current working directory:"
+            pwd
+            echo "Listing files:"
+            ls -R
       - run:
           name: Configure Minikube
           command: |
